# comms

./: .appveyor.yml  CMakeLists.txt  README.md
.github/workflows/: actions_build.yml
.github/workflows/workflows/: actions_build.yml
cmake/: CC_CommsExternal.cmake  CC_CommsPrefetch.cmake  CC_Compile.cmake  CC_CxxtestFuncs.cmake  CC_DocCleanupScript.cmake  CC_RunWithValgrindScript.cmake  LibCommsConfig.cmake
doc/: BUILD.md  CMake.md  README.md  doxygen.conf
doxygen/: comms.dox  doxygen.conf  layout.xml  main.dox  page_assert.dox  page_custom_checksum_layer.dox  page_custom_id_layer.dox  page_custom_size_layer.dox  page_custom_sync_prefix_layer.dox  page_custom_transport_value_layer.dox  page_define_prot.dox  page_dispatch.dox  page_field.dox  page_frame.dox  page_prot_stack.dox  page_use_prot.dox
include/comms/: Assert.h  CompileControl.h  EmptyHandler.h  ErrorStatus.h  Field.h  GenericHandler.h  GenericMessage.h  Message.h  MessageBase.h  MsgDispatcher.h  MsgFactory.h  MsgFactoryCreateFailureReason.h  cast.h  comms.h  dispatch.h  field_cast.h  fields.h  frames.h  iterator.h  options.h  process.h  protocols.h  traits.h  units.h  version.h
include/comms/details/: DispatchMsgHelperType.h  DispatchMsgIdRetrieveHelper.h  DispatchMsgLinearSwitchHelper.h  DispatchMsgPolymorphicHelper.h  DispatchMsgStaticBinSearchHelper.h  FieldBase.h  FieldCastHelper.h  MessageIdTypeRetriever.h  MessageImplBases.h  MessageImplBuilder.h  MessageImplOptionsParser.h  MessageInterfaceBases.h  MessageInterfaceBuilder.h  MessageInterfaceOptionsParser.h  MsgDispatcherOptionsParser.h  MsgFactoryBase.h  MsgFactoryOptionsParser.h  ProcessHelper.h  ReadIteratorHelper.h  ValueAssignWrapper.h  WriteIteratorHelper.h  base_detection.h  bits_access.h  detect.h  dispatch_impl.h  field_alias.h  fields_access.h  gen_enum.h  macro_common.h  message_check.h  process.h  protocol_layers_access.h  reverse_macro_args.h  tag.h  transport_fields_access.h  variant_access.h
include/comms/field/: ArrayList.h  Bitfield.h  BitmaskValue.h  Bundle.h  EnumValue.h  FloatValue.h  IntValue.h  NoValue.h  Optional.h  OptionalMode.h  String.h  Variant.h  basics.h  tag.h
include/comms/field/adapter/: AvailableLength.h  CustomReadWrap.h  CustomRefreshWrap.h  CustomRefresher.h  CustomValidator.h  CustomValueReader.h  CustomWriteWrap.h  DefaultValueInitialiser.h  DisplayOffset.h  EmptySerialization.h  ExistsBetweenVersions.h  FailOnInvalid.h  FieldType.h  FixedBitLength.h  FixedLength.h  FixedValue.h  IgnoreInvalid.h  InvalidByDefault.h  MissingOnInvalid.h  MissingOnReadFail.h  NumValueMultiRangeValidator.h  RemLengthMemberField.h  SequenceElemFixedSerLengthFieldPrefix.h  SequenceElemLengthForcing.h  SequenceElemSerLengthFieldPrefix.h  SequenceFixedSize.h  SequenceLengthForcing.h  SequenceSerLengthFieldPrefix.h  SequenceSizeFieldPrefix.h  SequenceSizeForcing.h  SequenceTerminationFieldSuffix.h  SequenceTrailingFieldSuffix.h  SerOffset.h  VarLength.h  VariantResetOnDestruct.h  VersionStorage.h
include/comms/field/basic/: ArrayList.h  Bitfield.h  Bundle.h  CommonFuncs.h  EnumValue.h  FloatValue.h  IntValue.h  NoValue.h  Optional.h  String.h  Variant.h
include/comms/field/details/: AdaptBasicField.h  FieldOpHelpers.h  MembersVersionDependency.h  OptionsParser.h  VersionStorage.h  adapters.h
include/comms/frame/: ChecksumLayer.h  ChecksumPrefixLayer.h  FrameLayerBase.h  MsgDataLayer.h  MsgIdLayer.h  MsgSizeLayer.h  SyncPrefixLayer.h  SyncSuffixLayer.h  TransportValueLayer.h
include/comms/frame/checksum/: BasicSum.h  BasicXor.h  Crc.h
include/comms/frame/details/: ChecksumLayerBase.h  ChecksumLayerOptionsParser.h  ChecksumPrefixLayerBase.h  FrameLayerBaseOptionsParser.h  FrameLayerDetails.h  MsgDataLayerOptionsParser.h  MsgIdLayerBase.h  MsgIdLayerOptionsParser.h  MsgSizeLayerBase.h  MsgSizeLayerConstNullPtrCastHelper.h  MsgSizeLayerOptionsParser.h  SyncPrefixLayerBase.h  SyncPrefixLayerOptionsParser.h  SyncSuffixLayerBase.h  SyncSuffixLayerOptionsParser.h  TransportValueLayerAllBases.h  TransportValueLayerBase.h  TransportValueLayerOptionsParser.h
include/comms/protocol/: ChecksumLayer.h  ChecksumPrefixLayer.h  FrameLayerBase.h  MsgDataLayer.h  MsgIdLayer.h  MsgSizeLayer.h  ProtocolLayerBase.h  SyncPrefixLayer.h  TransportValueLayer.h
include/comms/protocol/checksum/: BasicSum.h  BasicXor.h  Crc.h
include/comms/protocol/details/: ChecksumLayerBase.h  ChecksumLayerOptionsParser.h  ChecksumPrefixLayerBase.h  MsgDataLayerOptionsParser.h  MsgIdLayerBase.h  MsgIdLayerOptionsParser.h  MsgSizeLayerBase.h  MsgSizeLayerConstNullPtrCastHelper.h  MsgSizeLayerOptionsParser.h  ProtocolLayerBase.h  ProtocolLayerBaseOptionsParser.h  ProtocolLayerDetails.h  ProtocolLayerExtendingClassHelper.h  SyncPrefixLayerBase.h  SyncPrefixLayerOptionsParser.h  TransportValueLayerAdapter.h  TransportValueLayerBase.h  TransportValueLayerBases.h  TransportValueLayerOptionsParser.h
include/comms/util/: AlignedStorage.h  ArrayView.h  BitSizeToByteSize.h  MaxSizeOf.h  ScopeGuard.h  SizeToType.h  StaticQueue.h  StaticString.h  StaticVector.h  StringView.h  Tuple.h  access.h  alloc.h  assign.h  construct.h  detect.h  type_traits.h
include/comms/util/details/: AssignHelper.h  ConstructHelper.h  detect.h  type_traits.h
script/: appveyor_install.bat  dia  env_dev.sh  env_dev_clang.sh  env_dev_clang12.sh  env_dev_clang12_release.sh  env_dev_clang15.sh  env_dev_clang18_release.sh  env_dev_clang19_release.sh  env_dev_gcc.sh  env_dev_gcc11_release.sh  env_dev_gcc12.sh  env_dev_gcc14.sh  env_dev_rel.sh  env_dev_rel_gcc.sh  env_dev_rel_gcc12.sh  env_dev_size.sh  env_dev_size_gcc.sh
test/: CMakeLists.txt  ChecksumLayer.th  ChecksumPrefixLayer.th  CommsTestCommon.h  CustomChecksumLayer.th  CustomChecksumPrefixLayer.th  CustomMsgIdLayer.th  CustomMsgSizeLayer.th  CustomSyncPrefixLayer.th  CustomTransportValueLayer.th  Dispatch.th  Fields.th  Fields2.th  GenericMessage.th  Message.th  MsgDataLayer.th  MsgFactory.th  MsgIdLayer.th  MsgSizeLayer.th  SyncPrefixLayer.th  SyncSuffixLayer.th  TransportValueLayer.th  Util.th
